syntax = "proto3";

package v2ray.core.app.router;
option go_package = "github.com/CoderQuinn/ForgeRules/proto";

message CIDR {
  bytes ip = 1;
  uint32 prefix = 2;
}

message GeoIP {
  string country_code = 1;
  repeated CIDR cidr = 2;
}

message GeoIPList {
  repeated GeoIP entry = 1;
}
